--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
+@import "bootstrap/dist/css/bootstrap.css";
+
+.page {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #E2E8E4;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.root__container{
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 30px;
+  box-sizing: content-box;
+}
+
+@media screen and (max-width: 425px) {
+  .root__container{
+    padding-right: 19px;
+    padding-left: 19px;
+  }
 }
